# FCI

./: .gitignore  LICENSE  README.md  custom_data_demo.py  debug.py  debug2.py  interactive_demo.py  pyproject.toml  test_demo_logic.py  test_simulation.py  test_simulation_2.py
.github/workflows/: ci.yml
case_studies/: __init__.py
case_studies/tennessee_star/: README.md  __init__.py  download_data.py  report.py  run_case_study.py  study.py
case_studies/tennessee_star/data/processed/: attrition_panel.csv  focused_treatment_panel.csv  longitudinal_panel.csv
case_studies/tennessee_star/data/raw/: SOURCE.json
case_studies/tennessee_star/output/: star_benchmark.csv  star_bootstrap_adjacencies.csv  star_case_study_report.html  star_case_study_summary.json  star_descriptive_contrasts.csv  star_pag_edges.csv  star_sensitivity.csv
docs/: api.md  quickstart.md  theory.md
examples/: 01_basic_fci.py  02_latent_confounder_demo.py  03_oracle_benchmark.py  04_nonlinear_kci_benchmark.py  05_reference_benchmark.py  06_result_audit_export.py  07_realistic_large_benchmark.py  08_visual_benchmark_report.py  09_pcalg_fci_plus_comparison.py  10_fci_plus_advisor_showcase.py  11_fci_plus_practical_workflow.py  advisor_showcase.html  basic_pag_demo.py  realistic_benchmark_report.html
src/fci_engine/: __init__.py  api.py  config.py  diagnostics.py  reports.py  result.py  types.py
src/fci_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fci_engine/ci/: __init__.py  base.py  cache.py  discrete.py  fisher_z.py  kernel.py  missing_fisher_z.py
src/fci_engine/discovery/: __init__.py  base.py  dsep.py  fci.py  fci_plus.py  orientation.py  pdsep.py  rules.py  skeleton.py
src/fci_engine/graph/: __init__.py  pag.py
src/fci_engine/knowledge/: __init__.py  background.py
src/fci_engine/metrics/: __init__.py  accuracy.py  benchmark.py  stability.py
src/fci_engine/simulation/: __init__.py  mag_oracle.py  oracle_cases.py  oracle_graphs.py
src/fci_engine/utils/: __init__.py  validation.py
tests/: test_advisor_showcase.py  test_auto_alpha.py  test_background_knowledge.py  test_basic_pag_demo.py  test_ci_cache.py  test_diagnostics.py  test_discrete_ci.py  test_end_to_end.py  test_fci_api.py  test_fci_plus.py  test_fisher_z.py  test_import.py  test_interactive_demo_validation.py  test_interactive_report_export.py  test_kernel_ci.py  test_missing_fisher_z.py  test_nonlinear_kci_benchmark.py  test_oracle_benchmark_metrics.py  test_oracle_benchmark_runner.py  test_oracle_graphs.py  test_oracle_pag_rules.py  test_orientation.py  test_orientation_rules.py  test_package_metadata.py  test_pag.py  test_pag_queries.py  test_pdsep.py  test_published_reference_graphs.py  test_reference_causal_learn.py  test_reference_complex_causal_learn.py  test_reference_shapes.py  test_result_exports.py  test_semantic_metrics.py  test_skeleton.py  test_stability.py  test_star_case_study.py  test_validation.py  test_visual_report.py
tests/typecheck/: invalid_api.py  valid_api.py
typings/scipy/: __init__.pyi
typings/scipy/stats/: __init__.pyi
