[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fci_engine"
version = "0.1.0"
description = "Engineering-grade Fast Causal Inference implementation for PAG learning under latent confounding."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "fci_engine contributors" }
]
keywords = [
  "causal-discovery",
  "fast-causal-inference",
  "fci",
  "pag",
  "latent-confounding"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pandas>=1.5",
  "networkx>=2.8",
  "typing_extensions>=4.5",
]

[project.optional-dependencies]
dev = [
  "build>=1",
  # NumPy 2.5 stubs use PEP 695 syntax that MyPy cannot parse as Python 3.9.
  "numpy<2.5",
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.4",
  "black>=23",
  "mypy>=1.5,<2",
  "pandas-stubs>=1.5",
  "types-networkx>=3.1",
]
reference = [
  "causal-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fci_engine = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
packages = ["fci_engine"]
mypy_path = ["typings"]
strict = true
warn_unreachable = true
# NumPy stub releases differ on whether a normalization cast is redundant.
warn_redundant_casts = false
disable_error_code = ["redundant-cast"]

[[tool.mypy.overrides]]
module = ["causallearn.*"]
ignore_missing_imports = true
